kubernetes_files/deployment_with_env.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        env:    # this is to add environment variable from the configMap
         - name: DB_PORT # Give any name you want to give to the env varibale
           valueFrom: #Under this we will define from where we will be getting the value for the env varibale DB_PORT
            configMapKeyRef: 
             name: test-cm #name of the configmap you applied which contains the list of env variables
             key: db-port #This has to be exact same what you have defined in configMap
        ports:
        - containerPort: 80
