kubernetes_files/clusterip_service_nginx.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - targetPort: 80
      port: 80
