kubernetes_files/ingress_nginx.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingres-example
spec:
  rules:
  - host: "foo.bar.com"
    http:
      paths:
      - pathType: Prefix
        path: "/bar"
        backend:
          service:
            name: nginx
            port:
              number: 80
